# libXE-Game

./: .gitignore  CMakeLists.txt  clone  config.ini  configure
dylib-tests/: TestLib.cpp
legacy/: Game.cpp  Game.hpp  Macros.h  Main.cpp
legacy/Debug/: Logger.cpp  Logger.hpp
legacy/Entity/: Entity.hpp  Player.cpp  Player.hpp
legacy/Filesystem/: AssetManager.cpp  AssetManager.hpp
legacy/Map/: Map.cpp  Map.hpp  Tile.hpp
legacy/Save/: Config.cpp  Config.hpp
legacy/Sound/: BGM.hpp  SFX.hpp
res/data/: base_cfg.ini  objs.json  tileset.txt
res/maps/: TestGen.txt  level1.csv
src/Engine/: BaseServer.hpp
src/Engine/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/Engine/Debug/: Logger.cpp
src/Engine/Entity/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/Engine/Map/: GameObjectManager.cpp  GameObjectManager.hpp  TileManager.cpp  TileManager.hpp
src/Engine/Objects/: GameObject.cpp  GameObject.hpp  Tile.hpp
src/Engine/Save/: Config.cpp  Config.hpp  NBT.hpp  SaveGame.hpp
src/Game/: Game.cpp  Game.hpp  Main.cpp  Player.cpp  Player.hpp
tests/: Dylib-Main.cpp  Mixer-Main.cpp  Sound-Main.cpp
